# ephemera

./: .coverage  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ephemera/cli/: main.py
src/ephemera/core/: memory.py
src/ephemera/database/: models.py  session.py
src/ephemera/extractor/: base.py  builtin.py  cookies.py  jwt_claims.py
src/ephemera/proxy/: addon.py  runner.py
tests/: conftest.py  test_cli.py  test_extractor.py  test_memory.py
