[project]
name = "ephemera"
version = "0.1.0"
description = "A security context engine: shared memory between pentesting tools."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "sberreh95" }
]
dependencies = [
    "mitmproxy>=10.0.0",
    "sqlmodel>=0.0.14",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
ephemera = "ephemera.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ephemera"]

[tool.ruff]
line-length = 100
target-version = "py311"
